# geos

./: .Rbuildignore  .clang-format  .gitignore  404.html  DESCRIPTION  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  configure  configure.ac  cran-comments.md  index.html  pkgdown.yml  sitemap.xml
.github/workflows/: R-CMD-check.yaml  check-release.yaml  check.yaml  coverage.yml  pkgdown.yaml  test-coverage.yaml
R/: RcppExports.R  compat-sf.R  compat-terra.R  compat-vctrs.R  compat-wk.R  geo-bbox.R  geo-binary-operators.R  geo-binary-vector-operators.R  geo-convert.R  geo-coord-linestring.R  geo-coord-point.R  geo-coord-polygon.R  geo-coord.R  geo-plot.R  geo-ptype.R  geo-rect.R  geo-segment.R  geo-tbl-linestring.R  geo-tbl-point.R  geo-tbl-polygon.R  geo-tbl.R  geo-unary-operators.R  geo-unary-vector-operators.R  geo-wkb.R  geo-wkt.R  geo-xy.R  geom-package.R  geos-basic-strtree.R  geos-binary-atomic.R  geos-binary-geometry.R  geos-binary-operators.R  geos-buffer.R  geos-geometry-info.R  geos-geometry.R  geos-io.R  geos-join.R  geos-linear-referencing.R  geos-make.R  geos-misc.R  geos-package.R  (+16 more)
articles/: index.html
articles/articles/: geos-c-api.html
data-raw/: .gitignore  geos_c_coverage.R  make_callentries.R
dev/: 404.html  LICENSE-text.html  LICENSE.html  authors.html  index.html  pkgdown.yml  sitemap.xml
dev/news/: index.html
dev/reference/: as_geos_geometry.SpatVector.html  as_geos_geometry.html  as_geos_strtree.geos_strtree.html  as_geos_type_id.numeric.html  geos-package.html  geos.html  geos_area.html  geos_basic_strtree.html  geos_basic_strtree_size.html  geos_buffer.html  geos_buffer_params.html  geos_centroid.html  geos_constrained_delaunay_triangles.html  geos_contains_properly_any.html  geos_create_rectangle.html  geos_delaunay_triangles.html  geos_difference.html  geos_disjoint.html  geos_disjoint_matrix.html  geos_distance.html  geos_empty.html  geos_geometry_n.html  geos_inner_join.html  geos_inner_join_keys.html  geos_interpolate.html  geos_intersection.html  geos_is_valid.html  geos_is_valid_detail.html  geos_largest_empty_crc.html  geos_make_point.html  geos_make_polygon.html  geos_minimum_bounding_circle.html  geos_nearest.html  geos_nearest_hausdorff.html  geos_orientation_index.html  geos_polygonize.html  geos_polygonize_valid.html  geos_prepared_distance.html  geos_project.html  geos_read_wkt.html  (+17 more)
inst/extdata/: long_lake_depth.csv
inst/include/: geom.h  geom_RcppExports.h
man/: as_geos_geometry.Rd  geo_buffer.Rd  geo_convert.Rd  geo_coord_point.Rd  geo_disjoint.Rd  geo_intersection.Rd  geo_is_empty.Rd  geo_plot.Rd  geo_ptype.Rd  geo_rect.Rd  geo_segment.Rd  geo_tbl_point.Rd  geo_wkb.Rd  geo_wkt.Rd  geo_xy.Rd  geom-package.Rd  geos-package.Rd  geos_area.Rd  geos_basic_strtree.Rd  geos_buffer.Rd  geos_centroid.Rd  geos_create_rectangle.Rd  geos_delaunay_triangles.Rd  geos_disjoint.Rd  geos_disjoint_matrix.Rd  geos_distance.Rd  geos_empty.Rd  geos_geometry_n.Rd  geos_inner_join.Rd  geos_inner_join_keys.Rd  geos_intersection.Rd  geos_is_disjoint.Rd  geos_is_empty.Rd  geos_is_valid.Rd  geos_make_point.Rd  geos_minimum_bounding_circle.Rd  geos_nearest.Rd  geos_polygonize.Rd  geos_project.Rd  geos_read_wkt.Rd  (+25 more)
news/: index.html
reference/: as_geos_geometry.geos_geometry.html  as_geos_geometry.html  as_geos_type_id.default.html  geo_buffer.html  geo_convert.html  geo_coord_point.html  geo_plot.html  geo_ptype.html  geo_rect.html  geo_segment.html  geo_tbl_point.html  geo_wkb.html  geo_wkt.html  geo_xy.html  geom-package.html  geos-package.html  geos.html  geos_area.html  geos_basic_strtree.html  geos_basic_strtree_insert.html  geos_buffer.html  geos_buffer_params.html  geos_centroid.html  geos_clone.html  geos_create_rectangle.html  geos_crosses_any.html  geos_delaunay_triangles.html  geos_disjoint.html  geos_disjoint_matrix.html  geos_distance.html  geos_empty.html  geos_equals.html  geos_geometry_n.html  geos_inner_join.html  geos_inner_join_keys.html  geos_intersection.html  geos_is_disjoint.html  geos_is_empty.html  geos_is_valid.html  geos_is_valid_detail.html  (+46 more)
src/: Makevars  Makevars.win  RcppExports.cpp  geo-convert.cpp  geoarrow-imports.h  geos-base.cpp  geos-base.h  geos-basic-strtree.c  geos-binary-atomic.c  geos-binary-geometry.c  geos-binary-operators.cpp  geos-binary-operators.h  geos-binary-predicates.cpp  geos-binary-vector-operators.cpp  geos-binary-vector-operators.h  geos-buffer.cpp  geos-common.c  geos-common.h  geos-convert.cpp  geos-coords.cpp  geos-coords.h  geos-geometry-info.cpp  geos-geometry.c  geos-io.c  geos-linear-referencing.cpp  geos-make.c  geos-misc.cpp  geos-operator.cpp  geos-operator.h  geos-polygonize.c  geos-provider.cpp  geos-provider.h  geos-rcpp.cpp  geos-rcpp.h  geos-segment.c  geos-strtree.c  geos-topology.cpp  geos-unary-atomic.c  geos-unary-geometry.c  geos-unary-operators.cpp  (+11 more)
tests/: testthat.R
tests/testthat/: test-compat-sf.R  test-compat-terra.R  test-compat-vctrs.R  test-compat-wk.R  test-geo-bbox.R  test-geo-binary-operators.R  test-geo-binary-vector-operators.R  test-geo-convert.R  test-geo-coord-polygon.R  test-geo-geos.R  test-geo-plot.R  test-geo-segment.R  test-geo-tbl-linestring.R  test-geo-tbl-point.R  test-geo-tbl-polygon.R  test-geo-tbl.R  test-geo-unary-operators.R  test-geo-unary-vector-operators.R  test-geo-wkb.R  test-geo-wkt.R  test-geo-xy.R  test-geos-basic-strtree.R  test-geos-binary-atomic.R  test-geos-binary-geometry.R  test-geos-binary-operators.R  test-geos-buffer.R  test-geos-geometry-info.R  test-geos-geometry.R  test-geos-io.R  test-geos-join.R  test-geos-linear-referencing.R  test-geos-make.R  test-geos-misc.R  test-geos-plot.R  test-geos-polygonize.R  test-geos-segment.R  test-geos-strtree.R  test-geos-topology.R  test-geos-unary-atomic.R  test-geos-unary-geometry.R  (+10 more)
tools/: winlibs.R
vignettes/articles/: geos-c-api.Rmd
